# coretap

./: .gitignore  QA_REPORT_20260627.md  README.md  TEST.md  install.sh  pyproject.toml
coretap/: __main__.py  backends.py  cli.py  daemon.py  device_buttons.py  device_hid_helper.py  device_worker.py  grounding.py  model_pack.py  ocr.py  runtime.py  text_input.py
examples/: settings-flow.json
skills/coretap-mobile-use-lab/: SKILL.md
skills/coretap-mobile-use-lab/agents/: openai.yaml
skills/coretap-mobile-use-lab/references/: scenario-catalog.md
tests/: test_cli.py  test_core.py
